test_output_2.txt
jest-haste-map: Haste module naming collision: functions
  The following files share their name; please adjust your hasteImpl:
    * <rootDir>\functions\package.json
    * <rootDir>\src\functions\package.json

FAIL src/ai/flows/automated-maintenance-response-drafts.test.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\USER\Music\WEBSITES\studio-1\node_modules\yaml\browser\index.js:3
    import * as YAML from './dist/index.js'
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      11 | import {z} from 'genkit';
      12 | import { vertexAI } from '@genkit-ai/google-genai';
    > 13 |
         | ^
      14 | const MaintenanceRequestInputSchema = z.object({
      15 |   tenantName: z.string().describe('The name of the tenant making the request.'),
      16 |   propertyAddress: z.string().describe('The address of the property.'),

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (node_modules/dotprompt/dist/index.js:82:19)
      at Object.<anonymous> (node_modules/@genkit-ai/core/src/registry.ts:17:27)
      at Object.<anonymous> (node_modules/@genkit-ai/ai/src/generate.ts:30:26)
      at Object.<anonymous> (node_modules/@genkit-ai/ai/src/index.ts:57:8)
      at Object.<anonymous> (node_modules/genkit/src/common.ts:113:8)
      at Object.<anonymous> (node_modules/genkit/src/index.ts:28:15)
      at Object.<anonymous> (src/ai/flows/automated-maintenance-response-drafts.ts:13:18)
      at Object.<anonymous> (src/ai/flows/automated-maintenance-response-drafts.test.ts:21:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.667 s
Ran all test suites matching /src\\ai\\flows\\automated-maintenance-response-drafts.test.ts/i.
